--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+uHVi7f0V7E6jGzhal+vJ"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPvo6t5FvMwBppsGF0eriiB"
     },
     "kernelspec": {
       "name": "python3",
@@ -12,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "TPU"
+    }
   },
   "cells": [
     {
@@ -26,21 +26,45 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Potrebni moduli"
+      ],
+      "metadata": {
+        "id": "Xb0yYHshOHEi"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "id": "4HMHsJKcr9YZ"
       },
       "outputs": [],
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
         "import re\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
+        "\n",
         "from tensorflow.keras.preprocessing.text import Tokenizer\n",
         "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
-        "from tensorflow.keras.utils import to_categorical"
+        "from tensorflow.keras.utils import to_categorical\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n",
+        "from tensorflow.keras.layers import Embedding, SimpleRNN, GRU, Dense, Dropout"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Učitavanje i pretprocesiranje podataka"
+      ],
+      "metadata": {
+        "id": "rN3_XtoGOKS7"
+      }
     },
     {
       "cell_type": "code",
@@ -54,9 +78,9 @@
           "height": 206
         },
         "id": "_MrAmRx3sVNB",
-        "outputId": "b0901d21-94a6-4dd5-b4e3-6039897dfcfb"
+        "outputId": "be60c6a3-3851-4bcd-e083-39b25e564a8f"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -71,7 +95,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3ea64b31-b278-4536-a745-e046542ce9d8\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1bb06a82-9430-419a-bbb6-47402ae5c63a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -126,7 +150,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ea64b31-b278-4536-a745-e046542ce9d8')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1bb06a82-9430-419a-bbb6-47402ae5c63a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -178,12 +202,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3ea64b31-b278-4536-a745-e046542ce9d8 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1bb06a82-9430-419a-bbb6-47402ae5c63a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3ea64b31-b278-4536-a745-e046542ce9d8');\n",
+              "        const element = document.querySelector('#df-1bb06a82-9430-419a-bbb6-47402ae5c63a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -203,8 +227,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-faea05a5-3104-4ca3-a98d-f7e079d8c794\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-faea05a5-3104-4ca3-a98d-f7e079d8c794')\"\n",
+              "<div id=\"df-91f44f02-641d-4087-8994-f4bef59a5380\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-91f44f02-641d-4087-8994-f4bef59a5380')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -323,7 +347,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-faea05a5-3104-4ca3-a98d-f7e079d8c794 button');\n",
+              "        document.querySelector('#df-91f44f02-641d-4087-8994-f4bef59a5380 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -334,7 +358,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 2
         }
       ]
     },
@@ -347,7 +371,7 @@
       "metadata": {
         "id": "ePa976Y6vMmM"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -367,21 +391,21 @@
       "metadata": {
         "id": "JYbkg9crveGm"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Tokenizacija\n",
-        "tokenizer = Tokenizer(num_words=5000)\n",
+        "tokenizer = Tokenizer(num_words=5000, oov_token='<OOV>')\n",
         "tokenizer.fit_on_texts(df['Review'])\n",
         "sequences = tokenizer.texts_to_sequences(df['Review'])"
       ],
       "metadata": {
         "id": "qpJNPI_fviAs"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -394,7 +418,7 @@
       "metadata": {
         "id": "I1aJKvuav0cD"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -406,7 +430,7 @@
       "metadata": {
         "id": "qL1-a42RwDLZ"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -418,103 +442,12 @@
       "metadata": {
         "id": "LGBUAPYJv82H"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Embedding, SimpleRNN, Dense\n",
-        "\n",
-        "# Definiranje modela\n",
-        "model = Sequential()\n",
-        "model.add(Embedding(5000, 128, input_length=max_len)) # 5000 = veličina vokabulara, 128 = dimenzija embeddinga\n",
-        "model.add(SimpleRNN(64)) # broj jedinica u RNN sloju\n",
-        "model.add(Dense(3, activation='softmax')) # 3 izlazne jedinice za 3 klase\n",
-        "\n",
-        "# Kompilacija modela\n",
-        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-        "\n",
-        "# Treniranje modela\n",
-        "history = model.fit(X_train, y_train, batch_size=128, epochs=10, validation_data=(X_val, y_val))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7gHiiwycwELa",
-        "outputId": "b2a60161-48ea-4be7-9b40-c582a723b0ef"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1/10\n",
-            "97/97 [==============================] - 184s 2s/step - loss: 0.7609 - accuracy: 0.7265 - val_loss: 0.7078 - val_accuracy: 0.7389\n",
-            "Epoch 2/10\n",
-            "97/97 [==============================] - 182s 2s/step - loss: 0.5202 - accuracy: 0.8034 - val_loss: 0.5434 - val_accuracy: 0.8050\n",
-            "Epoch 3/10\n",
-            "97/97 [==============================] - 183s 2s/step - loss: 0.2634 - accuracy: 0.9062 - val_loss: 0.5425 - val_accuracy: 0.8187\n",
-            "Epoch 4/10\n",
-            "97/97 [==============================] - 176s 2s/step - loss: 0.0933 - accuracy: 0.9784 - val_loss: 0.6258 - val_accuracy: 0.7997\n",
-            "Epoch 5/10\n",
-            "97/97 [==============================] - 184s 2s/step - loss: 0.0236 - accuracy: 0.9977 - val_loss: 0.6873 - val_accuracy: 0.8119\n",
-            "Epoch 6/10\n",
-            "97/97 [==============================] - 186s 2s/step - loss: 0.0074 - accuracy: 0.9997 - val_loss: 0.7324 - val_accuracy: 0.8155\n",
-            "Epoch 7/10\n",
-            "97/97 [==============================] - 186s 2s/step - loss: 0.0038 - accuracy: 1.0000 - val_loss: 0.7734 - val_accuracy: 0.8121\n",
-            "Epoch 8/10\n",
-            "97/97 [==============================] - 183s 2s/step - loss: 0.0024 - accuracy: 1.0000 - val_loss: 0.7946 - val_accuracy: 0.8155\n",
-            "Epoch 9/10\n",
-            "97/97 [==============================] - 184s 2s/step - loss: 0.0018 - accuracy: 1.0000 - val_loss: 0.8254 - val_accuracy: 0.8080\n",
-            "Epoch 10/10\n",
-            "97/97 [==============================] - 183s 2s/step - loss: 0.0013 - accuracy: 1.0000 - val_loss: 0.8399 - val_accuracy: 0.8121\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model.evaluate(X_test, y_test)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BrkNWO1xwkz1",
-        "outputId": "079b5d58-a336-43c7-e9e1-80eaa6e09b33"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "129/129 [==============================] - 17s 131ms/step - loss: 0.8279 - accuracy: 0.8107\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.8278778791427612, 0.8106855154037476]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from tensorflow.keras.layers import Dropout\n",
-        "from tensorflow.keras.callbacks import EarlyStopping\n",
-        "\n",
         "model = Sequential()\n",
         "model.add(Embedding(5000, 128, input_length=max_len))\n",
         "model.add(SimpleRNN(64, return_sequences=True))\n",
