GRU & RNN with early stopping

--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPvo6t5FvMwBppsGF0eriiB"
+      "authorship_tag": "ABX9TyNvKmMROAdhW8C30mvz81sM"
     },
     "kernelspec": {
       "name": "python3",
@@ -13,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -36,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 40,
       "metadata": {
         "id": "4HMHsJKcr9YZ"
       },
@@ -78,9 +79,9 @@
           "height": 206
         },
         "id": "_MrAmRx3sVNB",
-        "outputId": "be60c6a3-3851-4bcd-e083-39b25e564a8f"
+        "outputId": "817ace1e-e78a-486c-b59b-7da623cd714c"
       },
-      "execution_count": 2,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -95,7 +96,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1bb06a82-9430-419a-bbb6-47402ae5c63a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-72e1b79b-32ba-422b-a4b5-fe847ea534d7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -150,7 +151,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1bb06a82-9430-419a-bbb6-47402ae5c63a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-72e1b79b-32ba-422b-a4b5-fe847ea534d7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -202,12 +203,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1bb06a82-9430-419a-bbb6-47402ae5c63a button.colab-df-convert');\n",
+              "        document.querySelector('#df-72e1b79b-32ba-422b-a4b5-fe847ea534d7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1bb06a82-9430-419a-bbb6-47402ae5c63a');\n",
+              "        const element = document.querySelector('#df-72e1b79b-32ba-422b-a4b5-fe847ea534d7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -227,8 +228,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-91f44f02-641d-4087-8994-f4bef59a5380\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-91f44f02-641d-4087-8994-f4bef59a5380')\"\n",
+              "<div id=\"df-0a1c497e-aeeb-4a98-a24d-6870c8051bb5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0a1c497e-aeeb-4a98-a24d-6870c8051bb5')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -347,7 +348,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-91f44f02-641d-4087-8994-f4bef59a5380 button');\n",
+              "        document.querySelector('#df-0a1c497e-aeeb-4a98-a24d-6870c8051bb5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -358,7 +359,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 41
         }
       ]
     },
@@ -371,7 +372,7 @@
       "metadata": {
         "id": "ePa976Y6vMmM"
       },
-      "execution_count": 3,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -391,7 +392,7 @@
       "metadata": {
         "id": "JYbkg9crveGm"
       },
-      "execution_count": 4,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -405,7 +406,7 @@
       "metadata": {
         "id": "qpJNPI_fviAs"
       },
-      "execution_count": 5,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -418,7 +419,7 @@
       "metadata": {
         "id": "I1aJKvuav0cD"
       },
-      "execution_count": 26,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -430,35 +431,183 @@
       "metadata": {
         "id": "qL1-a42RwDLZ"
       },
-      "execution_count": 31,
+      "execution_count": 46,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, labels, test_size=0.2, random_state=42)\n",
-        "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.25, random_state=42)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, labels, test_size=0.2)\n",
+        "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.25)"
       ],
       "metadata": {
         "id": "LGBUAPYJv82H"
       },
-      "execution_count": 32,
+      "execution_count": 47,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "// TODO\n",
+        "- reduce vocab size\n",
+        "- reduce epochs\n",
+        "- try out single layer RNN\n",
+        "- try out GRU\n",
+        "- implement GRU with GloVe/Word2Vec"
+      ],
+      "metadata": {
+        "id": "v6TdfO7EK0ON"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model1 = Sequential()\n",
+        "model1.add(Embedding(4000, 128, input_length=max_len))  # 3000 je veličina vokabulara, 128 je dimenzija embeddinga\n",
+        "model1.add(SimpleRNN(32))  # jedinice u RNN sloju\n",
+        "model1.add(Dropout(0.5))   # Dropout za smanjenje preprilagođenosti\n",
+        "model1.add(Dense(3, activation='softmax'))  # Izlazni sloj s tri klase\n",
+        "\n",
+        "model1.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=2)\n",
+        "\n",
+        "history = model1.fit(X_train, y_train, epochs=10, batch_size=128, validation_data=(X_val, y_val), callbacks=[early_stopping])"
+      ],
+      "metadata": {
+        "id": "JDyujOMNauq9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f549d218-a5b3-4b6a-a7de-698ac044113b"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "97/97 [==============================] - 194s 2s/step - loss: 0.8930 - accuracy: 0.6157 - val_loss: 0.7204 - val_accuracy: 0.7406\n",
+            "Epoch 2/10\n",
+            "97/97 [==============================] - 185s 2s/step - loss: 0.6053 - accuracy: 0.7850 - val_loss: 0.5065 - val_accuracy: 0.8236\n",
+            "Epoch 3/10\n",
+            "97/97 [==============================] - 182s 2s/step - loss: 0.4142 - accuracy: 0.8587 - val_loss: 0.4931 - val_accuracy: 0.8275\n",
+            "Epoch 4/10\n",
+            "97/97 [==============================] - 180s 2s/step - loss: 0.3106 - accuracy: 0.8987 - val_loss: 0.4633 - val_accuracy: 0.8316\n",
+            "Epoch 5/10\n",
+            "97/97 [==============================] - 180s 2s/step - loss: 0.2111 - accuracy: 0.9377 - val_loss: 0.5158 - val_accuracy: 0.8341\n",
+            "Epoch 6/10\n",
+            "97/97 [==============================] - 182s 2s/step - loss: 0.1422 - accuracy: 0.9629 - val_loss: 0.5102 - val_accuracy: 0.8248\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model1.evaluate(X_test, y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UOBSD8aozOtR",
+        "outputId": "c15fdc86-dc1f-4423-cf72-509a8769faed"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "129/129 [==============================] - 18s 136ms/step - loss: 0.5031 - accuracy: 0.8246\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.5030768513679504, 0.824591338634491]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Definiranje modela\n",
+        "model2 = Sequential()\n",
+        "model2.add(Embedding(5000, 128, input_length=max_len))  # 5000 je veličina vokabulara, 128 je dimenzija embeddinga\n",
+        "model2.add(GRU(64))  # 64 jedinice u GRU sloju\n",
+        "model2.add(Dropout(0.5))  # Dropout za smanjenje preprilagođenosti\n",
+        "model2.add(Dense(3, activation='softmax'))  # 3 izlazne jedinice za tri klase sentimenta\n",
+        "\n",
+        "# Kompilacija modela\n",
+        "model2.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "# Postavljanje rano zaustavljanja\n",
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=3)\n",
+        "\n",
+        "# Treniranje modela\n",
+        "history = model2.fit(X_train, y_train, epochs=10, batch_size=128, validation_data=(X_val, y_val), callbacks=[early_stopping])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PsNpfTDDAMZP",
+        "outputId": "6573a1f6-33bd-4c26-873a-0aa4e1ec84df"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "97/97 [==============================] - 18s 160ms/step - loss: 0.7459 - accuracy: 0.7292 - val_loss: 0.5681 - val_accuracy: 0.7765\n",
+            "Epoch 2/10\n",
+            "97/97 [==============================] - 14s 142ms/step - loss: 0.4930 - accuracy: 0.8101 - val_loss: 0.4659 - val_accuracy: 0.8148\n",
+            "Epoch 3/10\n",
+            "97/97 [==============================] - 13s 133ms/step - loss: 0.3492 - accuracy: 0.8668 - val_loss: 0.4141 - val_accuracy: 0.8399\n",
+            "Epoch 4/10\n",
+            "97/97 [==============================] - 12s 123ms/step - loss: 0.3011 - accuracy: 0.8878 - val_loss: 0.4406 - val_accuracy: 0.8438\n",
+            "Epoch 5/10\n",
+            "97/97 [==============================] - 11s 111ms/step - loss: 0.2386 - accuracy: 0.9134 - val_loss: 0.5019 - val_accuracy: 0.8192\n",
+            "Epoch 6/10\n",
+            "97/97 [==============================] - 9s 94ms/step - loss: 0.2033 - accuracy: 0.9257 - val_loss: 0.5626 - val_accuracy: 0.8343\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---"
+      ],
+      "metadata": {
+        "id": "RVqs9YTKNVG6"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "model = Sequential()\n",
         "model.add(Embedding(5000, 128, input_length=max_len))\n",
-        "model.add(SimpleRNN(64, return_sequences=True))\n",
-        "model.add(Dropout(0.5))\n",
-        "model.add(SimpleRNN(64))\n",
-        "model.add(Dropout(0.5))\n",
+        "model.add(SimpleRNN(32, return_sequences=True))\n",
+        "model.add(Dropout(0.6))\n",
+        "model.add(SimpleRNN(32))\n",
+        "model.add(Dropout(0.6))\n",
         "model.add(Dense(3, activation='softmax'))\n",
         "\n",
         "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
-        "early_stopping = EarlyStopping(monitor='val_loss', patience=3)\n",
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=2)\n",
         "\n",
         "history = model.fit(X_train, y_train, epochs=10, batch_size=128, validation_data=(X_val, y_val), callbacks=[early_stopping])"
       ],
@@ -467,34 +616,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xzkRUBahJZpG",
-        "outputId": "c578bc91-30d9-4dcb-86f3-11f51c6a9a6f"
+        "outputId": "a4ca3dee-8f4b-49f9-f3c8-ffb7b773d6f4"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/10\n",
-            "97/97 [==============================] - 320s 3s/step - loss: 0.8388 - accuracy: 0.6894 - val_loss: 0.8159 - val_accuracy: 0.7416\n",
+            "97/97 [==============================] - 373s 4s/step - loss: 0.8992 - accuracy: 0.6461 - val_loss: 0.5486 - val_accuracy: 0.7938\n",
             "Epoch 2/10\n",
-            "97/97 [==============================] - 295s 3s/step - loss: 0.6483 - accuracy: 0.7586 - val_loss: 1.1851 - val_accuracy: 0.7389\n",
+            "97/97 [==============================] - 363s 4s/step - loss: 0.5854 - accuracy: 0.7975 - val_loss: 0.4888 - val_accuracy: 0.8297\n",
             "Epoch 3/10\n",
-            "97/97 [==============================] - 312s 3s/step - loss: 0.6878 - accuracy: 0.7525 - val_loss: 0.9183 - val_accuracy: 0.7418\n",
+            "97/97 [==============================] - 362s 4s/step - loss: 0.4483 - accuracy: 0.8472 - val_loss: 0.4779 - val_accuracy: 0.8348\n",
             "Epoch 4/10\n",
-            "97/97 [==============================] - 315s 3s/step - loss: 0.6113 - accuracy: 0.7880 - val_loss: 0.8004 - val_accuracy: 0.7816\n",
+            "97/97 [==============================] - 377s 4s/step - loss: 0.3737 - accuracy: 0.8715 - val_loss: 0.5355 - val_accuracy: 0.8421\n",
             "Epoch 5/10\n",
-            "97/97 [==============================] - 295s 3s/step - loss: 0.5284 - accuracy: 0.8193 - val_loss: 0.8236 - val_accuracy: 0.7877\n",
-            "Epoch 6/10\n",
-            "97/97 [==============================] - 292s 3s/step - loss: 0.4899 - accuracy: 0.8298 - val_loss: 0.6279 - val_accuracy: 0.8170\n",
-            "Epoch 7/10\n",
-            "97/97 [==============================] - 309s 3s/step - loss: 0.4712 - accuracy: 0.8371 - val_loss: 0.6386 - val_accuracy: 0.8114\n",
-            "Epoch 8/10\n",
-            "97/97 [==============================] - 313s 3s/step - loss: 0.5239 - accuracy: 0.8244 - val_loss: 0.6595 - val_accuracy: 0.8031\n",
-            "Epoch 9/10\n",
-            "97/97 [==============================] - 298s 3s/step - loss: 0.4660 - accuracy: 0.8393 - val_loss: 0.5868 - val_accuracy: 0.8182\n",
-            "Epoch 10/10\n",
-            "97/97 [==============================] - 290s 3s/step - loss: 0.4514 - accuracy: 0.8424 - val_loss: 0.5530 - val_accuracy: 0.8121\n"
+            "97/97 [==============================] - 365s 4s/step - loss: 0.3090 - accuracy: 0.8912 - val_loss: 0.6136 - val_accuracy: 0.8370\n"
           ]
         }
       ]
@@ -509,37 +648,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZgeXK90GPF8X",
-        "outputId": "4ef13d09-2939-4790-d50c-a8e777d03708"
+        "outputId": "4109e26b-75cd-4cd3-c53b-57840cb05b6d"
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "129/129 [==============================] - 27s 206ms/step - loss: 0.5391 - accuracy: 0.8192\n"
+            "129/129 [==============================] - 19s 144ms/step - loss: 0.5175 - accuracy: 0.8217\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.5390658378601074, 0.8192241787910461]"
+              "[0.5174793601036072, 0.8216637969017029]"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 39
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "JDyujOMNauq9"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
