--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -66,7 +66,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gv0zbCjf1Cy4",
-        "outputId": "ae600869-0ddb-403b-96df-e7bc58b98e19"
+        "outputId": "877c5c25-d86d-4049-ffe0-ad2f9d5f9624"
       },
       "execution_count": 2,
       "outputs": [
@@ -2081,7 +2081,7 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.callbacks import EarlyStopping\n",
-        "from tensorflow.keras.layers import Embedding, SimpleRNN, GRU, LSTM, Dense, Dropout, TextVectorization\n",
+        "from tensorflow.keras.layers import Embedding, SimpleRNN, GRU, LSTM, Bidirectional, Dense, Dropout, TextVectorization\n",
         "from tensorflow.keras.optimizers import Adam\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -2091,7 +2091,7 @@
       "metadata": {
         "id": "iQdXSsdYdepQ"
       },
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -2106,7 +2106,7 @@
           "height": 206
         },
         "id": "O38zIzvV9V23",
-        "outputId": "746d58de-78c6-4a79-fd4a-d0e7c62edc31"
+        "outputId": "2cdf97c7-8ebf-4503-ced6-806006de945c"
       },
       "execution_count": 4,
       "outputs": [
@@ -2123,7 +2123,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-736e2e27-7015-49f6-a03a-0e92d0d65c37\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-21ce6e4e-ca76-470c-b3b8-7db5d4a74f1f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2178,7 +2178,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-736e2e27-7015-49f6-a03a-0e92d0d65c37')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-21ce6e4e-ca76-470c-b3b8-7db5d4a74f1f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2230,12 +2230,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-736e2e27-7015-49f6-a03a-0e92d0d65c37 button.colab-df-convert');\n",
+              "        document.querySelector('#df-21ce6e4e-ca76-470c-b3b8-7db5d4a74f1f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-736e2e27-7015-49f6-a03a-0e92d0d65c37');\n",
+              "        const element = document.querySelector('#df-21ce6e4e-ca76-470c-b3b8-7db5d4a74f1f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2255,8 +2255,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d4f0e281-1048-44a0-8351-54bf84c15ae5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d4f0e281-1048-44a0-8351-54bf84c15ae5')\"\n",
+              "<div id=\"df-bc8708dd-7c5c-466f-9e63-5a130b35e412\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bc8708dd-7c5c-466f-9e63-5a130b35e412')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2375,7 +2375,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d4f0e281-1048-44a0-8351-54bf84c15ae5 button');\n",
+              "        document.querySelector('#df-bc8708dd-7c5c-466f-9e63-5a130b35e412 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -2412,7 +2412,7 @@
           "height": 449
         },
         "id": "Tc2x5wIxsb8c",
-        "outputId": "e4b33e43-ce7a-4937-a3a4-a932124430d4"
+        "outputId": "b0f13eb3-e63e-4f92-b6fc-c28e565681dd"
       },
       "execution_count": 6,
       "outputs": [
@@ -2498,7 +2498,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sy_jh59e_JGG",
-        "outputId": "8451584f-3065-4571-db11-b067ccb2a365"
+        "outputId": "8d3ed851-36ed-4f61-dc60-8710c21b087d"
       },
       "execution_count": 10,
       "outputs": [
@@ -2565,7 +2565,7 @@
         "id": "14bBIUQd_8wl",
         "outputId": "f9e2b880-2f49-46b9-a1d9-0caff47f2152"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2627,7 +2627,7 @@
         },
         "outputId": "293be2d5-d19b-4531-9f79-2bd42e8f8957"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2675,7 +2675,7 @@
         "id": "kNrWf6qWP2mC",
         "outputId": "abd6b400-b4ff-4b9c-adb6-57dce2d5d26c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2735,7 +2735,7 @@
         "id": "9l5hvTL8f_2M",
         "outputId": "9110c279-69c8-4c75-efe5-27d464e3cb53"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2762,11 +2762,11 @@
       "source": [
         "bi_gru_model = tf.keras.models.Sequential([\n",
         "    encoder,\n",
-        "    tf.keras.layers.Embedding(len(encoder.get_vocabulary()), 50, mask_zero = True),\n",
-        "    tf.keras.layers.Bidirectional(tf.keras.layers.GRU(32)),\n",
-        "    tf.keras.layers.Dense(32, activation='relu', kernel_regularizer=tf.keras.regularizers.l1(0.005)),\n",
-        "    tf.keras.layers.Dropout(0.4),\n",
-        "    tf.keras.layers.Dense(3, activation='softmax')])\n",
+        "    Embedding(len(encoder.get_vocabulary()), 50, mask_zero = True),\n",
+        "    Bidirectional(GRU(32)),\n",
+        "    Dense(32, activation='relu', kernel_regularizer=tf.keras.regularizers.l1(0.005)),\n",
+        "    Dropout(0.4),\n",
+        "    Dense(3, activation='softmax')])\n",
         "\n",
         "bi_gru_model.compile(optimizer=Adam(learning_rate=1e-3), loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
@@ -2783,7 +2783,7 @@
         },
         "outputId": "08a31788-9a88-4f8d-9004-5cee290e950f"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2845,7 +2845,7 @@
         "id": "B-2QrLAMgPy-",
         "outputId": "b694673c-0c51-4978-ff0a-114417084ccc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2872,11 +2872,11 @@
       "source": [
         "lstm_model = tf.keras.models.Sequential([\n",
         "    encoder,\n",
-        "    tf.keras.layers.Embedding(len(encoder.get_vocabulary()), 50, mask_zero = True),\n",
-        "    tf.keras.layers.LSTM(64),\n",
-        "    tf.keras.layers.Dense(32, activation='relu', kernel_regularizer=tf.keras.regularizers.l1(0.005)),\n",
-        "    tf.keras.layers.Dropout(0.5),\n",
-        "    tf.keras.layers.Dense(3, activation='softmax')])\n",
+        "    Embedding(len(encoder.get_vocabulary()), 50, mask_zero = True),\n",
+        "    LSTM(64),\n",
+        "    Dense(32, activation='relu', kernel_regularizer=tf.keras.regularizers.l1(0.005)),\n",
+        "    Dropout(0.5),\n",
+        "    Dense(3, activation='softmax')])\n",
         "\n",
         "lstm_model.compile(optimizer=Adam(learning_rate=1e-3), loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
@@ -2893,7 +2893,7 @@
         },
         "outputId": "1c19dc85-737a-4222-8569-56f377d30adf"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2953,7 +2953,7 @@
         "id": "PrIChbFcgJbb",
         "outputId": "74d7dfff-54dc-4dde-a07c-26f1e234acea"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2967,15 +2967,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Dvosmjerni LSTM"
+      ],
+      "metadata": {
+        "id": "6_xVnQE719YX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "bi_lstm_model = tf.keras.models.Sequential([\n",
         "    encoder,\n",
-        "    tf.keras.layers.Embedding(len(encoder.get_vocabulary()), 50, mask_zero = True),\n",
-        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64)),\n",
-        "    tf.keras.layers.Dense(32, activation='relu', kernel_regularizer=tf.keras.regularizers.l1(0.005)),\n",
-        "    tf.keras.layers.Dropout(0.5),\n",
-        "    tf.keras.layers.Dense(3, activation='softmax')])\n",
+        "    Embedding(len(encoder.get_vocabulary()), 50, mask_zero = True),\n",
+        "    Bidirectional(LSTM(64)),\n",
+        "    Dense(32, activation='relu', kernel_regularizer=tf.keras.regularizers.l1(0.005)),\n",
+        "    Dropout(0.5),\n",
+        "    Dense(3, activation='softmax')])\n",
         "\n",
         "bi_lstm_model.compile(optimizer=Adam(learning_rate=1e-3), loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
@@ -2992,7 +3001,7 @@
         },
         "outputId": "32377f03-0976-4f25-9597-aca608ccf3e5"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3054,7 +3063,7 @@
         },
         "outputId": "2954073f-37cb-4c71-ea2b-aa7e8f37a503"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3086,29 +3095,29 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3d787f8c-45ce-46ad-b3ac-1cdd1e91b3d0"
+        "outputId": "048d0402-879a-4e88-b198-5759505ae958"
       },
-      "execution_count": 25,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-01-11 08:51:16--  https://nlp.stanford.edu/data/glove.6B.zip\n",
+            "--2024-01-11 09:24:40--  https://nlp.stanford.edu/data/glove.6B.zip\n",
             "Resolving nlp.stanford.edu (nlp.stanford.edu)... 171.64.67.140\n",
             "Connecting to nlp.stanford.edu (nlp.stanford.edu)|171.64.67.140|:443... connected.\n",
             "HTTP request sent, awaiting response... 301 Moved Permanently\n",
             "Location: https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip [following]\n",
-            "--2024-01-11 08:51:17--  https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip\n",
+            "--2024-01-11 09:24:40--  https://downloads.cs.stanford.edu/nlp/data/glove.6B.zip\n",
             "Resolving downloads.cs.stanford.edu (downloads.cs.stanford.edu)... 171.64.64.22\n",
             "Connecting to downloads.cs.stanford.edu (downloads.cs.stanford.edu)|171.64.64.22|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 862182613 (822M) [application/zip]\n",
             "Saving to: ‘glove.6B.zip’\n",
             "\n",
-            "glove.6B.zip        100%[===================>] 822.24M  5.02MB/s    in 2m 39s  \n",
+            "glove.6B.zip        100%[===================>] 822.24M  5.02MB/s    in 2m 38s  \n",
             "\n",
-            "2024-01-11 08:53:56 (5.19 MB/s) - ‘glove.6B.zip’ saved [862182613/862182613]\n",
+            "2024-01-11 09:27:19 (5.19 MB/s) - ‘glove.6B.zip’ saved [862182613/862182613]\n",
             "\n"
           ]
         }
@@ -3124,9 +3133,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ae8cabd6-2c57-4a34-fc24-c7014e539aa3"
+        "outputId": "2302bcc5-3048-475c-bdc3-1dc6ca986165"
       },
-      "execution_count": 26,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -3157,7 +3166,7 @@
       "metadata": {
         "id": "KlVBR40j0jAH"
       },
-      "execution_count": 27,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -3183,20 +3192,28 @@
       "metadata": {
         "id": "YTAsmY030nuq"
       },
-      "execution_count": 28,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## BiGRU model sa GloVe vektorima"
+      ],
+      "metadata": {
+        "id": "5s9dH40U3PzA"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "# BiGRU model sa GloVe vektorima\n",
         "gru_model_glove1 = tf.keras.models.Sequential([\n",
         "    encoder,\n",
         "    embedding_layer,\n",
-        "    tf.keras.layers.Bidirectional(tf.keras.layers.GRU(64)),\n",
-        "    tf.keras.layers.Dense(64, activation='relu'),\n",
-        "    tf.keras.layers.Dropout(0.4),\n",
-        "    tf.keras.layers.Dense(3, activation='softmax')])\n",
+        "    Bidirectional(GRU(64)),\n",
+        "    Dense(64, activation='relu'),\n",
+        "    Dropout(0.4),\n",
+        "    Dense(3, activation='softmax')])\n",
         "\n",
         "gru_model_glove1.compile(optimizer=Adam(learning_rate=1e-3), loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
@@ -3213,7 +3230,7 @@
         },
         "outputId": "59e6addd-ee93-4b7a-8fc7-e2eb39585157"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3273,7 +3290,7 @@
         },
         "outputId": "da780608-ffc0-49e3-a074-7c860a0874c7"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3287,16 +3304,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## BiLSTM model sa GloVe vektorima"
+      ],
+      "metadata": {
+        "id": "xKWuq_zd3Xmo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# BiLSTM model sa GloVe vektorima\n",
         "bi_lstm_model_glove = tf.keras.models.Sequential([\n",
         "    encoder,\n",
         "    embedding_layer,\n",
-        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64)),\n",
-        "    tf.keras.layers.Dense(32, activation='relu', kernel_regularizer=tf.keras.regularizers.l1(0.005)),\n",
-        "    tf.keras.layers.Dropout(0.5),\n",
-        "    tf.keras.layers.Dense(3, activation='softmax')])\n",
+        "    Bidirectional(LSTM(64)),\n",
+        "    Dense(32, activation='relu', kernel_regularizer=tf.keras.regularizers.l1(0.005)),\n",
+        "    Dropout(0.5),\n",
+        "    Dense(3, activation='softmax')])\n",
         "\n",
         "bi_lstm_model_glove.compile(optimizer=Adam(learning_rate=1e-3), loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
@@ -3313,7 +3338,7 @@
         "id": "SIY9iMRauGX8",
         "outputId": "e4e2cc03-4b61-446c-e971-5e9af1c09147"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3381,7 +3406,7 @@
         "id": "BieEyIWsuGVG",
         "outputId": "8246fd50-404b-451b-ae42-3eb5b0a27438"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
