Dovršeni primjeri rada klasifikatora

--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -4007,38 +4007,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Komentari/recenzije\n",
-        "positive = [\"This hotel exceeded all my expectations, the staff were incredibly helpful and the location was perfect.\",\n",
-        "            \"Absolutely loved my stay here! The rooms were clean, spacious, and well-equipped.\",\n",
-        "            \"Fantastic experience! The food was gourmet quality and the service was top-notch.\"]\n",
-        "\n",
-        "negative = [\"I was very disappointed with my stay. The room was dirty and the service was unacceptably slow.\",\n",
-        "            \"Terrible experience. The hotel was noisy, and the staff were rude and unhelpful.\",\n",
-        "            \"Not worth the price. The facilities were outdated and the bed was uncomfortable.\"]"
-      ],
-      "metadata": {
-        "id": "pysbLAoXiq7R"
-      },
-      "execution_count": 127,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# for comment in [positive, negative]:\n",
-        "#     print(f\"Original Comment: {comment}\")\n",
-        "#     pred = classify_comment(comment, gru_model_glove)\n",
-        "#     print(f\"Predicted Sentiment: {pred}\\n\")"
-      ],
-      "metadata": {
-        "id": "Av6Rt2rIkWpj"
-      },
-      "execution_count": 82,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def classify_comment(comment, model):\n",
         "    labels = ['Negative', 'Neutral', 'Positive']\n",
         "    # Ručno pretprocesiranje komentara\n",
@@ -4048,12 +4016,12 @@
         "    ds = ds.batch(1)\n",
         "    # Predviđanje\n",
         "    prediction = model.predict(ds)\n",
-        "    return prediction"
+        "    return labels[np.argmax(prediction)]"
       ],
       "metadata": {
         "id": "D8pn_2l1vw3j"
       },
-      "execution_count": 137,
+      "execution_count": 139,
       "outputs": []
     },
     {
@@ -4068,16 +4036,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pp0rldfKwZvk",
-        "outputId": "53229898-24d1-4de7-82af-61b2398eaba4"
+        "outputId": "a534110d-c580-48ab-e03b-1cf1cafdfde6"
       },
-      "execution_count": 138,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 38ms/step\n",
-            "Predicted Sentiment: [[0.9436634  0.04963758 0.00669897]]\n",
+            "1/1 [==============================] - 0s 10ms/step\n",
+            "Predicted Sentiment: Negative\n",
             "\n"
           ]
         }
@@ -4085,12 +4053,77 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Komentari/recenzije\n",
+        "positive = [\"This hotel exceeded all my expectations, the staff were incredibly helpful and the location was perfect.\",\n",
+        "            \"Absolutely loved my stay here! The rooms were clean, spacious, and well-equipped.\",\n",
+        "            \"Fantastic experience! The food was gourmet quality and the service was top-notch.\"]\n",
+        "\n",
+        "negative = [\"I was very disappointed with my stay. The room was dirty and the service was unacceptably slow.\",\n",
+        "            \"Terrible experience. The hotel was noisy, and the staff were rude and unhelpful.\",\n",
+        "            \"Not worth the price. The facilities were outdated and the bed was uncomfortable.\"]"
+      ],
       "metadata": {
-        "id": "_3U4_AKUxMEJ"
+        "id": "pysbLAoXiq7R"
       },
-      "execution_count": null,
+      "execution_count": 156,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for comment in positive + negative:\n",
+        "    print(f\"Original Comment: {comment}\")\n",
+        "    pred = classify_comment(comment, gru_model_glove)\n",
+        "    print(f\"Predicted Sentiment: {pred}\\n\")\n",
+        "    print()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Av6Rt2rIkWpj",
+        "outputId": "30742cca-afe1-48df-ecb2-f78a06371fc4"
+      },
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Comment: This hotel exceeded all my expectations, the staff were incredibly helpful and the location was perfect.\n",
+            "1/1 [==============================] - 0s 14ms/step\n",
+            "Predicted Sentiment: Positive\n",
+            "\n",
+            "\n",
+            "Original Comment: Absolutely loved my stay here! The rooms were clean, spacious, and well-equipped.\n",
+            "1/1 [==============================] - 0s 22ms/step\n",
+            "Predicted Sentiment: Positive\n",
+            "\n",
+            "\n",
+            "Original Comment: Fantastic experience! The food was gourmet quality and the service was top-notch.\n",
+            "1/1 [==============================] - 0s 20ms/step\n",
+            "Predicted Sentiment: Positive\n",
+            "\n",
+            "\n",
+            "Original Comment: I was very disappointed with my stay. The room was dirty and the service was unacceptably slow.\n",
+            "1/1 [==============================] - 0s 47ms/step\n",
+            "Predicted Sentiment: Negative\n",
+            "\n",
+            "\n",
+            "Original Comment: Terrible experience. The hotel was noisy, and the staff were rude and unhelpful.\n",
+            "1/1 [==============================] - 0s 44ms/step\n",
+            "Predicted Sentiment: Negative\n",
+            "\n",
+            "\n",
+            "Original Comment: Not worth the price. The facilities were outdated and the bed was uncomfortable.\n",
+            "1/1 [==============================] - 0s 27ms/step\n",
+            "Predicted Sentiment: Negative\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
